--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,20 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'PT Sans';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1 {
+  font-size: 3em;
+  font-weight: bold;
+  font-style: italic;
+  letter-spacing: 2px;
+}
+
+p {
+  font-size: 1.2em;
+  letter-spacing: 1px;
 }
 
 code {
