--- a/src/styles/Questionaire.css
+++ b/src/styles/Questionaire.css
@@ -7,6 +7,7 @@
     background-color: rgb(254, 206, 0);
     height: 50px;
     margin-bottom: 20px;
+    transition: linear 4s;
 }
 
 h2 {
@@ -61,4 +62,14 @@ h2 {
 .question-start div button:active {
     background-color: #D3D3D3;
     box-shadow: 0px 0px 2px inset black;
+}
+
+.stake {
+    opacity: 1;
+    transition: opacity 2.9s;
+}
+
+.stakeInv {
+    opacity: 0;
+    transition: opacity 2.9s;
 }
