--- a/src/styles/Awnser.css
+++ b/src/styles/Awnser.css
@@ -1,3 +1,30 @@
+.wrapper:first-child {
+  margin-top: 10px;
+}
+
+.wrapper {
+  margin-top: 40px;
+}
+
+.explanation {
+  font-size: 0.7em;
+  letter-spacing: 0;
+  color: #352e2e;
+}
+
+.further {
+  margin-top: 20px;
+  float: right;
+  padding: 10px 20px;
+  color: white;
+  font-weight: bold;
+  font-size: 1.2em;
+  border-radius: 3px;
+  border: 1px solid rgba(33, 149, 243, 0.438);
+  background-color: #2196F3;
+}
+
+
 /* from: https://www.w3schools.com/howto/howto_css_custom_checkbox.asp */
 
 /* The container */
@@ -69,7 +96,7 @@
 .container-checkbox {
   display: block;
   position: relative;
-  padding-left: 35px;
+  padding-left: 40px;
   margin-bottom: 12px;
   cursor: pointer;
   font-size: 22px;
@@ -132,28 +159,6 @@
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
-
-
-
-
-
-
-
-
-
-/* The container */
-.container-checkbox {
-    display: block;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: 22px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
   
   /* Hide the browser's default checkbox */
   .container-checkbox input {
