--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,12 @@
 .content {
-    
     background-color: white;
+    padding-bottom: 20px;
+}
+
+.wrapper-app {
+    min-height: 100vh;
+    
+    
 }
 
 .header {
@@ -36,14 +42,10 @@ nav {
 }
 
 .App {
-    height: 100vh;
     background-color: white;
 }
 
 footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
     width: 100%;
     padding: 10px 0;
     background-color: #dddddd;
