--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,10 @@
 .content {
-    
     background-color: white;
+    padding-bottom: 20px;
+}
+
+.wrapper-app {
+    min-height: 100vh;
 }
 
 .header {
