--- a/src/styles/Awnser.css
+++ b/src/styles/Awnser.css
@@ -7,14 +7,14 @@
 }
 
 .explanation {
-  font-size: 0.7em;
+  font-size: 0.9em;
   letter-spacing: 0;
   color: #352e2e;
 }
 
 .further {
-  margin-top: 20px;
-  float: right;
+  margin: 20px 0 0 auto;
+  display: block;
   padding: 10px 20px;
   color: white;
   font-weight: bold;
