--- a/src/styles/Questionaire.css
+++ b/src/styles/Questionaire.css
@@ -1,12 +1,10 @@
 .question {
-    display: grid;
+    
 }
 
 .title {
-    grid-row: 1/2;
     background-color: rgb(254, 206, 0);
-    height: 50px;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     transition: linear 4s;
 }
 
@@ -18,14 +16,17 @@ h2 {
 }
 
 .questions {
-    grid-row: 2/2;
+    grid-row: 3/3;
+    grid-column: 1;
     margin: 0 auto;
+    margin-top: 20px;
     width: 60%;
 }
 
 .question-start {
     width: 80%;
     margin: 0 auto;
+    margin-top: 20px;
     display: grid;
 }
 
@@ -70,4 +71,12 @@ h2 {
 .stakeInv {
     opacity: 0;
     transition: opacity 2.9s;
+}
+
+.optional-q-desc {
+    margin: 0 auto;
+    font-size: 1.2em;
+    margin-bottom: 35px;
+    background-color: #ddd;
+    padding: 15px 20%;
 }
